[package]
name = "raymc"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "tokio"] }
iced_anim = "0.3.1"
image = "0.25.10"
once_cell = "1.21.4"
rust-embed = "8.11.0"
souvlaki = "0.8.3"
tokio = { version = "1.52.3", features = ["time"] }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 2
panic = "abort"
strip = true
